收藏夹部分功能重构
